# Scanscope

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  generate_nmap_xml.py  pyproject.toml
examples/: README.md  optimize_hdbscan.py  optimize_umap.py
scanscope/: __main__.py  _meta.py  args.py  data.py  html.py  log.py  parser.py  sql.py  utils.py  writer.py
scanscope/assets/templates/: base.html  bokeh.html  sidebar.html
scanscope/css/: style.css
scanscope/js/: select_circle.js
scanscope/static/: bokeh-aux.js  hosts-aux.js  sql-aux.js  utils.js
scanscope/static/opt/: bokeh-aux.css  bokeh-aux.js  hosts-aux.js  scanscope.css  services-aux.css  services-aux.js  sql-aux.js  table.css  utils.js
scanscope/templates/: base.html  bokeh.html  hosts.html  html-templates.html  index.html  info.html  licenses.html  services.html  sidebar.html
src/scanscope/: __init__.py  __main__.py  args.py  colors.py  data.py  html.py  log.py  optimize.py  parser.py  port_categories.py  portmap.py  sql.py  utils.py  writer.py
src/scanscope/static/: bubble-chart-aux.js  mermaid.dark.css  scanscope.css  services-aux.js  sql-aux.js  sql-wasm.min.js  treemap-aux.js  utils.js
src/scanscope/templates/: base.html  bubble-chart.html  hosts.html  html-templates.html  index.html  info.html  licenses.html  services.html  sidebar.html  treemap.html
tests/: test_html.py
